// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct shape 1`] = `
Object {
  "called": true,
  "error": null,
  "handleAddToWishlist": [Function],
  "handleAddToWishlistSuccess": [Function],
  "handleWishlistDialogClose": [Function],
  "isMultipleWishlistsEnabled": false,
  "isWishlistDialogOpen": false,
  "loading": true,
}
`;

exports[`testing handleAddToWishlist single wishlist mode should add simple product to list 1`] = `
Array [
  Object {
    "variables": Object {
      "itemOptions": Object {
        "quantity": "1",
        "selected_options": Array [],
        "sku": "sku",
      },
      "wishlistId": "0",
    },
  },
]
`;

exports[`testing handleAddToWishlist single wishlist mode should add the product to list 1`] = `
Array [
  Object {
    "variables": Object {
      "itemOptions": Object {
        "quantity": "1",
        "selected_options": Array [
          "123",
          "456",
        ],
        "sku": "sku",
      },
      "wishlistId": "0",
    },
  },
]
`;

exports[`testing handleAddToWishlist single wishlist mode should call onAddToWishlistSuccess 1`] = `
Array [
  Object {
    "message": "Item successfully added to Bday List.",
    "timeout": 5000,
    "type": "info",
  },
]
`;

exports[`testing handleAddToWishlist single wishlist mode should call onWishlistUpdate 1`] = `
Array [
  Object {
    "variables": Object {
      "cartId": "cart123",
      "itemId": "1234",
    },
  },
]
`;

exports[`testing handleAddToWishlist single wishlist mode should call onWishlistUpdateError if there was an error calling the mutation 1`] = `
Array [
  true,
]
`;

exports[`testing handleAddToWishlist single wishlist mode should use necessary translations 1`] = `
Array [
  Array [
    Object {
      "defaultMessage": "Item successfully added to Bday List.",
      "id": "cartPage.wishlist.ee.successMessage",
    },
    Object {
      "wishlistName": "Bday List",
    },
  ],
]
`;

exports[`testing handleAddToWishlistSuccess should call onAddToWishlistSuccess 1`] = `
Array [
  Object {
    "message": "Item successfully added to Bday List.",
    "timeout": 5000,
    "type": "info",
  },
]
`;

exports[`testing handleAddToWishlistSuccess should call onWishlistUpdate 1`] = `
Array [
  Object {
    "variables": Object {
      "cartId": "cart123",
      "itemId": "1234",
    },
  },
]
`;

exports[`testing handleAddToWishlistSuccess should use necessary translations 1`] = `
Array [
  Array [
    Object {
      "defaultMessage": "Item successfully added to Bday List.",
      "id": "cartPage.wishlist.ee.successMessage",
    },
    Object {
      "wishlistName": "Bday List",
    },
  ],
]
`;
